[package]
authors = ["eV <ev@7pr.xyz>"]
name = "yodel"
version = "0.1.0"

[dependencies]
strobe-rs = "0.4.0"
curve25519-dalek = { version = "1", default-features = false }
rand_core = { version = "0.3.1", default-features = false }

[dev-dependencies]
rand = { version = "0.6.0" }

[features]
nightly = ["curve25519-dalek/nightly"]
default = ["std", "u32_backend"]
std = ["alloc", "curve25519-dalek/std"]
alloc = ["curve25519-dalek/alloc"]
u32_backend = ["curve25519-dalek/u32_backend"]
u64_backend = ["curve25519-dalek/u64_backend"]
avx2_backend = ["curve25519-dalek/avx2_backend"]
