[package]
authors = ["eV <ev@7pr.xyz>"]
name = "yodel"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }

[dependencies.strobe-rs]
default-features = false
version = "0.5.1"
git = "https://git.cutelab.house/evq/strobe-rs"

[dependencies.curve25519-dalek]
default-features = false
features = ["serde"]
version = "2"

[dependencies.rand_core]
default-features = false
version = "0.5"

[dependencies.once_cell]
default-features = false
version = "1.8"
path = "../once_cell"

[dev-dependencies.rand]
version = "0.7"

[features]
nightly = ["once_cell/parking_lot", "once_cell/nightly"]
default = ["std", "u32_backend"]
std = ["alloc", "curve25519-dalek/std", "once_cell/std"]
alloc = ["curve25519-dalek/alloc"]
u32_backend = ["curve25519-dalek/u32_backend"]
u64_backend = ["curve25519-dalek/u64_backend"]
avx2_backend = ["curve25519-dalek/avx2_backend"]
